JumpScript/tests/baselines/reference/declarationEmitTypeAliasTypeParameterExtendingUnknownSymbol.errors.txt
tests/cases/compiler/declarationEmitTypeAliasTypeParameterExtendingUnknownSymbol.jump(1,18): error TS2304: Cannot find name 'Unknown'.
tests/cases/compiler/declarationEmitTypeAliasTypeParameterExtendingUnknownSymbol.jump(1,18): error TS4083: Type parameter 'T' of exported type alias has or is using private name 'Unknown'.


==== tests/cases/compiler/declarationEmitTypeAliasTypeParameterExtendingUnknownSymbol.jump (2 errors) ====
    type A<T extends Unknown> = {}
                     ~~~~~~~
!!! error TS2304: Cannot find name 'Unknown'.
                     ~~~~~~~
!!! error TS4083: Type parameter 'T' of exported type alias has or is using private name 'Unknown'.